adding period gap section

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1157,6 +1157,86 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{west2008,
+       author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Bochanski}, John J. and
+         {Covey}, Kevin R. and {Reid}, I. Neill and {Dhital}, Saurav and
+         {Hilton}, Eric J. and {Masuda}, Michael},
+        title = "{Constraining the Age-Activity Relation for Cool Stars: The Sloan Digital Sky Survey Data Release 5 Low-Mass Star Spectroscopic Sample}",
+      journal = {\aj},
+     keywords = {solar neighborhood, Galaxy: kinematics and dynamics, Galaxy: structure, stars: activity, stars: late-type, stars: low-mass, brown dwarfs, Astrophysics},
+         year = "2008",
+        month = "Mar",
+       volume = {135},
+       number = {3},
+        pages = {785-795},
+          doi = {10.1088/0004-6256/135/3/785},
+archivePrefix = {arXiv},
+       eprint = {0712.1590},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008AJ....135..785W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{kiman2019,
+       author = {{Kiman}, Rocio and {Schmidt}, Sarah J. and {Angus}, Ruth and
+         {Cruz}, Kelle L. and {Faherty}, Jacqueline K. and {Rice}, Emily},
+        title = "{Exploring the Age-dependent Properties of M and L Dwarfs Using Gaia and SDSS}",
+      journal = {\aj},
+     keywords = {stars: activity, stars: kinematics and dynamics, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Jun",
+       volume = {157},
+       number = {6},
+          eid = {231},
+        pages = {231},
+          doi = {10.3847/1538-3881/ab1753},
+archivePrefix = {arXiv},
+       eprint = {1904.05911},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AJ....157..231K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reinhold2019,
+       author = {{Reinhold}, Timo and {Bell}, Keaton J. and {Kuszlewicz}, James and
+         {Hekker}, Saskia and {Shapiro}, Alexander I.},
+        title = "{Transition from spot to faculae domination. An alternate explanation for the dearth of intermediate Kepler rotation periods}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Jan",
+       volume = {621},
+          eid = {A21},
+        pages = {A21},
+          doi = {10.1051/0004-6361/201833754},
+archivePrefix = {arXiv},
+       eprint = {1810.11250},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...621A..21R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{simonian2019,
+       author = {{Simonian}, Gregory V.~A. and {Pinsonneault}, Marc H. and
+         {Terndrup}, Donald M.},
+        title = "{Rapid Rotation in the Kepler Field: Not a Single Star Phenomenon}",
+      journal = {\apj},
+     keywords = {binaries: close, stars: late-type, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Feb",
+       volume = {871},
+       number = {2},
+          eid = {174},
+        pages = {174},
+          doi = {10.3847/1538-4357/aaf97c},
+archivePrefix = {arXiv},
+       eprint = {1809.02141},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...871..174S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{astropy2018,
     Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
