--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,34 +1,62 @@
 \section{Conclusion}
 
-We examined the rotational evolution of \kepler\ field stars by interpreting
-their velocity dispersions as a proxy for age.
+In this paper, we demonstrated that the dispersion of velocities in the
+direction of galactic latitude, \vb, can be used as an age proxy, by showing
+that there is no strong evidence for mass-dependent heating in low-mass
+\kepler\ dwarfs: the velocity dispersions of K and M dwarfs, whose
+main-sequence lifetimes are longer than around 11 Gyrs, do not appear to
+increase with decreasing mass.
+Although {\it vertical} velocity, \vz, is the quantity that most strongly
+traces time-dependent orbital heating in the disc of the Galaxy, most stars
+with measured rotation periods do not yet have radial velocities, so we used
+velocity in the direction of Galactic latitude, \vb\, as a proxy for \vz.
+Using stars in the GUMS simulation, we showed that using \vb\ as a proxy for
+\vz\ introduces an additional velocity dispersion, which increases with
+increasing Galactic latitude.
+For this reason we did not attempt to convert \vb\ dispersions into ages using
+an age-velocity dispersion relation.
+However, after removing high-latitude ($b>15^\circ$) stars from the sample, we
+confirmed that using \vb\ instead of \vz\ does not introduce any
+mass-dependent velocity dispersion bias into the sample.
+We therefore assumed that \vb\ velocity dispersion can be used to accurately
+rank stars by age, \ie\ a group of stars with a large velocity dispersion is,
+on average, older than a group of stars with a small velocity dispersion.
+
 % We found that old groups of cool dwarfs, selected to be coeval using the
 % \citet{angus2019} gyrochronology relation, do {\it not} have the same velocity
 % dispersion across all temperatures.
+We used the \vb\ velocity dispersions of stars in the \mct\ catalog to explore
+the evolution of stellar rotation period as a function of effective
+temperature and age.
 We found that the \citet{angus2019} relation, which is based on the
 period-color relation of the 650 Myr Praesepe cluster, does not correctly
-describe the period-age-color/\teff\ relation for old stars.
-It appears that the period-color/\teff\ relation changes shape over time in a
-way that qualitatively agrees with theoretical models which include a
-mass-dependent core-envelope angular momentum transport \citep{spada2019}.
+describe the period-age-\teff\ relation for old stars.
 At young ages, rotation period is anti-correlated with \teff: cooler stars
 spin more slowly than hotter stars of the same age.
 However, at intermediate ages the relation flattens out and K dwarfs rotate at
 the same rate, regardless of mass.
 At old ages, it seems that cooler K dwarfs spin more rapidly than hotter K
 dwarfs of the same age.
-% We speculate that the rotation period gap \citep{mcquillan2014} may separate
-% a young regime where stellar rotation periods decrease with increasing mass
-% from an old regime where periods increase with increasing mass, however more
-% data are needed to provide a conclusive result.
+We showed that the period-\teff\ relations change shape over time in a way
+that qualitatively agrees with theoretical models which include a
+mass-dependent core-envelope angular momentum transport \citep{spada2019}.
+
 % The period-color/\teff\ relation seems to start flattening out after $\sim$1
 % Gyr (see figure \ref{fig:age_cut}), potentially around the same age, or just
 % older than the period gap which is located at a gyrochronal age of around
 % $\sim$1.1 Gyr (see figure \ref{fig:dispersion_period_teff}).
-Finally, when velocity dispersion is interpreted as an age proxy, it appears
-that the oldest stars in the \mct\ catalog are cooler than 4500 K, which
-suggests that lower-mass stars remain active for longer, allowing their
-rotation periods to be measured at older ages.
+We also found that the oldest stars in the \mct\ catalog are cooler than 4500
+K, which suggests that lower-mass stars remain active for longer, allowing
+their rotation periods to be measured at older ages.
+We speculate that the rotation period gap \citep{mcquillan2014} may separate
+a young regime where stellar rotation periods decrease with increasing mass
+from an old regime where periods increase with increasing mass, however more
+data are needed to provide a conclusive result.
+The velocity dispersions of stars increase smoothly across the rotation period
+gap, indicating that the gap does not separate two distinct populations.
+Finally, we used kinematics to reveal a population of synchronized binaries
+with rotation periods less than around 10 days.
+
 % We outlined a number of scenarios which could provide alternative
 % explanations for these observations, including incorrect dust corrections for
 % the lowest-mass stars and an excess of companions increasing the velocity
