--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -78,16 +78,15 @@
 
 \begin{document}
 
-\title{Exploring the ages of rotating stars using galactic dynamics: a novel
-approach to calibrating gyrochronology}
+\title{Exploring the evolution of stellar rotation using kinematics}
 
 \author{%
     Ruth Angus,
     Angus Beane,
     Adrian Price-Whelan,
+    Jason Curtis,
     Elisabeth Newton,
     Jennifer van Saders,
-    Jason Curtis,
     Lauren Anderson,
     Rocio Kiman,
     Travis Berger,
@@ -107,24 +106,24 @@ approach to calibrating gyrochronology}
 
 % Word limit: 3500, currently 3702
 
-% Word limit: 250, currently 199
+% Word limit: 250, currently 261
 \begin{abstract}
     \include{abstract}
 \end{abstract}
 
-% Word limit: 750, currently: 815
+% Word limit: 750, currently: 903
 \include{intro}
 
-% Word limit: 1000, currently 1220
+% Word limit: 1000, currently 1634
 \include{method}
 
-% Word limit: 1000, currently 1184
+% Word limit: 1000, currently 1037
 \include{results}
 
 % Word limit: 500
 % \include{discussion}
 
-% Word limit: 250, currently 216
+% Word limit: 250, currently 191
 \include{conclusion}
 
 \include{acknowledgements}
