--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -7,9 +7,11 @@ main-sequence stars.
 % period and color/temperature/mass does not remain constant over large
 % timescales, contradicting a long-held assumption that underlies many
 % gyrochronology relations.
-In this work, we use the velocities of low-mass \kepler\ dwarfs as an age
-proxy, to reveal their rotational evolution and demonstrate that kinematics
-could be a useful tool for calibrating gyrochronology.
+In this work, we use the velocity dispersions of low-mass \kepler\ dwarfs as
+an age proxy, to reveal their rotational evolution and demonstrate that
+kinematics could be a useful tool for calibrating gyrochronology.
+Firstly, we find no evidence for mass-dependent heating in a sample of K and M
+dwarfs in the \kepler\ field.
 % At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
 % to the Praesepe cluster, accurately predicts the relative ages of stars.
 We find that the period-color relationship of the Praesepe cluster is not
@@ -17,7 +19,7 @@ repeated in stars of older ages: a polynomial gyrochronology model, fit to
 Praesepe stars, under-predicts the ages of late K dwarfs in the field.
 In general we find that lower-mass stars spin more slowly than higher-mass
 stars at young ages.
-This is likely because their stronger magnetic fields lead to more efficient
+This is probably because their stronger magnetic fields lead to more efficient
 angular momentum loss and reflects the behavior of young open clusters such as
 the Pleaides, Praesepe, and the Hyades.
 However, at older ages we find that late G and early K dwarfs rotate at the
@@ -29,8 +31,12 @@ However, at older ages we find that late G and early K dwarfs rotate at the
 These results align with recent findings from the rotation periods of stars in
 middle-aged open clusters and theoretical models that vary the rate of
 surface-to-core angular momentum transport as a function of time and mass.
-Finally, we find no evidence for mass-dependent heating in a sample of K and M
-dwarfs in the \kepler\ field.
+We also find that the kinematically oldest \kepler\ stars with measured
+rotation periods are late-K and early-M dwarfs, indicating that these stars
+maintain spotted surfaces and stay magnetically active longer than more
+massive stars.
+Finally, we find that the most rapidly rotating K-dwarfs are likely to be
+synchronized binaries.
 
 % We find that groups of stars, selected to be the same age using a
 % gyrochronology relation calibrated to the Praesepe cluster, do {\it not} have
