--- a/paper/results.tex
+++ b/paper/results.tex
@@ -21,25 +21,7 @@
 % of NGC 6819 -- the oldest cluster with available rotation periods), it
 % over-predicts the rotation periods of K dwarfs in the 1.1 Gyr NGC 6811
 % cluster.
-% These gyrochronal ages are shown on a \gaia\ color-magnitude diagram (CMD) in
-% figure \ref{fig:age_gradient}.
-% The stars with old gyrochronal ages, plotted in yellow hues, predominantly lie
-% along the upper edge of the MS, where stellar evolution models predict old
-% stars to be, however the majority of these `old' stars are bluer than \gcolor\
-% $\sim$ 1.5 dex.
-% This suggests that either old M dwarfs are missing from the \mct\ catalog, or
-% the \citet{angus2019} gyrochronology relation under-predicts the ages of
-% low-mass stars.
-% Given that lower-mass stars stay active for longer than higher-mass stars
-% \citep[\eg][]{west2011}, and are therefore more likely to have measurable
-% rotation periods at old ages, the latter scenario seems more likely.
 
-% To further explore the relationship between rotation period, \teff\ and age,
-% we first removed high and low velocity outliers by performing 3$\sigma$
-% sigma-clipping on the \vb\ velocities.
-% Without sigma-clipping, we found that a small number of high velocity
-% outliers at the low-temperature end of our sample substantially raised the
-% velocity dispersion for cooler stars.
 % We then selected groups of stars within different gyrochronal age ranges and
 % calculated the standard deviation of \vb\ velocities (\sigmavb), as a function
 % of effective temperature for each age group.
@@ -139,21 +121,24 @@ same with, or without sigma-clipping.
 We also limited the sample to temperatures in the range 5500 K $<$ \teff\ $<$
 3500 K to avoid biases caused by the selection function at the faint, cool
 end, and binarity or weakened braking \citep{vansaders2016} at the hot end.
+Finally, we removed stars with short rotation periods by cutting out stars
+with gyrochronal ages less than 0.5 Gyr.
 
-Figure \ref{fig:vplot} shows rotation period versus effective temperature for
-the \mct\ sample, coloured by the standard deviation of their (\vb)
-velocities, where \sigmavb\ was calculated for groups of stars over a grid in
-$\log_{10}$(period) and temperature.
+The top panel of figure \ref{fig:vplot} shows rotation period versus effective
+temperature for the \mct\ sample, coloured by the standard deviation of their
+(\vb) velocities, where \sigmavb\ was calculated for groups of stars over a
+grid in $\log_{10}$(period) and temperature.
 If we assume that mass dependent heating does not strongly affect this sample
 and \vb\ at low galactic latitudes is an unbiased tracer of \vz, then \vb\
-velocity dispersion can be interpreted as an age proxy and stars plotted in a
+velocity dispersion can be interpreted as an age proxy, and stars plotted in a
 similar color in figure \ref{fig:vplot} are similar ages.
 \begin{figure}
   \caption{
     Top: Rotation period vs effective temperature for stars in the \mct\
     sample, colored by the velocity dispersions of stars calculated over a
     grid in $\log_{10}$(period) and \teff.
-    Black lines show isochrones that project the rotation-color relation of
+    Black lines show isochrones from a gyrochronology model that projects the
+    rotation-color relation of
     Praesepe to longer rotation periods over time \citep{angus2019}.
     These isochrones do not appear to reflect the evolution of field stars at
     long rotation periods/old ages: they do not trace lines of constant
@@ -165,41 +150,68 @@ similar color in figure \ref{fig:vplot} are similar ages.
     White lines show isochrones from a model that includes mass and
     age-dependent angular momentum transport between the core and envelope
     \citep{spada2019}.
-    Qualitatively, these isochrones appear to reflect the evolution of field
+    Qualitatively, these isochrones reflect the evolution of field
     stars at long rotation periods/old ages: they trace lines of constant
-    velocity dispersion.
+    velocity dispersion by reproducing periods of `stalled' rotational
+    evolution for K-dwarfs.
 }
   \centering
     \includegraphics[width=1\textwidth]{main_figure}
-\label{fig:main_figure}
+\label{fig:vplot}
 \end{figure}
 Overall, figure \ref{fig:vplot} shows that velocity dispersion increases with
 rotation period across all temperatures, implying that both velocity
 dispersion and rotation period increases with age as expected.
-Lines of constant age (isochrones) appear to follow the shape of the
-Praesepe-based gyrochronology model (black dotted line) at young ages.
-However, at older ages it appears that the relation between rotation period
-and \teff\ flattens out, until eventually rotation period {\it decreases} with
-decreasing effective temperature at a given age.
+Black lines show isochrones from the \citep{angus2019} gyrochronology model,
+which projects the rotation-color relation of Praesepe to longer rotation
+periods over time.
+These isochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyrs.
+At the youngest ages, these isochrones seem to describe the data well: the
+palest yellow (youngest) stars with the lowest velocity dispersions all fall
+close to the 0.5 Gyr isochrone.
+% Lines of constant age (isochrones) appear to follow the shape of the
+% Praesepe-based gyrochronology model (black dotted line) at young ages.
+% However, at older ages it appears that the relation between rotation period
+% and \teff\ flattens out, until eventually rotation period {\it decreases} with
+% decreasing effective temperature at a given age.
+However, although the 0.5 Gyr and 1 Gyr isochrones do appear to trace constant
+velocity dispersion/age among the field stars, by 1.5 Gyrs the isochrones
+start to {\it cross} different velocity dispersion regimes.
+For example, the 1.5 Gyr isochrone lies on top of stars with velocity
+dispersions of around 10-11 kms$^{-1}$ at 5000-5500K and stars with $\sim$15
+\kms\ velocity dispersions at 4000-4500K.
+The isochrones older than 1.5 Gyr also cross a range of velocity dispersions.
+If these were true isochrones however, they should follow lines of constant
+velocity dispersion.
+At ages older than around 1 Gyr, it appears that isochrones should have a more
+flattened, or even inverted relationship between rotation period and effective
+temperature than these Praesepe-based models.
+% For late K-dwarfs older than around 1 Gyr, it appears that lower-mass stars
+% rotate more rapidly than higher-mass stars.
+% This is the opposite of the trend that is observed in young open clusters such
+% as Praesepe and the Hyades.
 
-Figure \ref{fig:masses_with_models} shows the same as figure \ref{fig:vplot},
-however mass is plotted on the x-axis instead of temperature and the models
-are those of \citet{spada2019}.
-The masses of these stars are taken from the \kepler\ input catalog
-\citep{brown2011}.
+The bottom panel of figure \ref{fig:vplot} shows velocity dispersion as a
+function of rotation period and {\it mass}, obtained from the Kepler Input
+Catalog \citep{brown2011}, with isochrones from the \citep{spada2019}
+gyrochronology model shown as white lines.
+These isochrones are also plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyrs.
+Although these models do not trace lines of constant velocity dispersion at
+0.5 and 1 Gyr, they do appear to reproduce trends in the data at ages of 1.5
+Gyr and older.
 The \citet{spada2019} models appear to qualitatively agree with the data:
 their rotation period-\teff\ relation flattens out over time and eventually
-inverts over a narrow range of temperatures.
+inverts.
 
-These results indicate that stars of spectral type ranging from late G to late
-K follow a braking law that changes over time.
+The results shown in figure \ref{fig:vplot} indicate that stars of spectral
+type ranging from late G to late K follow a braking law that changes over
+time.
 In particular, the relationship between rotation period and effective
 temperature appears to flatten out and eventually invert.
 These results provide further evidence for `stalled' rotational evolution of K
 dwarfs, like that observed in open clusters \citep{curtis2019} and reproduced
 by models that vary angular momentum transport between stellar core and
 envelope with time and mass \citep{spada2019}.
-
 The velocity dispersions of stars in the \mct\ sample provide the following
 picture of rotational evolution.
 At young ages, stellar rotation period decreases with mass, likely because
@@ -210,13 +222,102 @@ According to the \citet{spada2019} model, there is minimal transportation of
 angular momentum from the surface to the core of the star at these young ages,
 so the surface slows down but the core keeps spinning rapidly.
 At intermediate ages, rotation period is constant with mass, and at late ages
-rotation period {\it increases} with mass for GK dwarfs.
-The explanation for this, according to the \citet{spada2019} model, is that
+rotation period {\it increases} with mass for K-dwarfs.
+The interpretation of this, according to the \citet{spada2019} model, is that
 lower-mass stars are still braking more efficiently at these intermediate and
 old ages but their cores are more tightly coupled to their envelopes, allowing
-angular momentum transport between the two interior layers.
+angular momentum transport between the two layers.
 Angular momentum resurfaces and prevents the stellar envelopes from
-spinning-down rapidly.
+spinning-down rapidly, and this effect is strongest for late K-dwarfs with
+effective temperatures of $\sim$4000-4500K and masses $\sim$0.5-0.7 M$_\odot$.
+
+It has been demonstrated that lower-mass stars remain magnetically active
+longer than more massive stars, \citep{west2008, kiman2019}.
+If the detectability of a rotation period is considered to be a magnetic
+activity proxy, then our results provide further evidence for a mass-dependent
+activity lifetime.
+Figure \ref{fig:vplot} shows that the groups of stars with the largest
+velocity dispersions are cooler than 4500 K.
+This implies that the oldest stars with detectable rotation periods, are
+cooler than 4500 K, \ie\ these-low mass stars stay active longer than more
+massive stars.
+
+\subsection{The period gap and synchronized binaries}
+\label{sec:gap}
+
+There is a sharp gap in the population of rotation periods, which lies just
+above the 1 Gyr isochrone in the upper panel of figure \ref{fig:vplot}, whose
+origin is unknown and is the subject of much speculation \citep{mcquillan2014,
+davenport2018, reinhold2019}.
+The Praesepe-based model appears to be valid below the gap but not above.
+Although this may be coincidental (and more data would be needed to confirm a
+connection) the gap may indeed separate a young regime where stellar cores are
+decoupled from their envelopes from an old regime where these layers are more
+tightly coupled.
+If so, this could indicate that the phenomenon responsible for changing the
+shape of isochrones in rotation-\teff\ space is related to the phenomenon that
+produces the gap.
+
+\begin{figure}
+  \caption{
+      Top: rotation period vs. effective temperate for stars in the \mct\
+    sample, separated into three groups. Blue circles
+      show stars with rotation periods longer than the
+    period gap, orange squares show stars with rotation periods shorter than
+    the gap, but longer than the lower edge of the main rotation period
+    distribution, and green triangles show stars with rotation periods shorter
+    than this lower edge.
+    Stars were separated into these three groups using \citet{angus2019}
+    gyrochronology models, with the scheme shown in the legend.
+    Only stars cooler than 5000 K are plotted in
+    the bottom panel in order to isolate populations above and below the
+    period gap, which only extends up to temperatures of $\sim$4600 K.
+    Bottom: the velocities of these groups of stars (in the direction of
+    Galactic latitude, $b$) are shown as a function of rotation period.
+}
+  \centering
+    \includegraphics[width=1\textwidth]{gap}
+\label{fig:gap}
+\end{figure}
+
+Figure \ref{fig:gap} shows the velocity dispersions of stars in the \mct\
+sample, with stars subdivided into three groups: those that rotate more
+quickly than the major rotation period distribution (green triangles), those
+with rotation periods shorter than the gap (orange squares), and those with
+rotation periods longer than the gap (blue circles).
+Stars were separated into these three groups using \citet{angus2019}
+gyrochronology models, according to the scheme shown in the legend.
+Only stars cooler than 5000 K are included in the bottom panel in order to
+isolate populations above and below the period gap, which only extends up to a
+temperature of $\sim$4600 K.
+In general, velocity dispersion increases with rotation period because both
+quantities increase with age.
+There is a smooth transition in velocity dispersion between stars with
+rotation periods below and above the gap (orange squares to blue circles),
+suggesting that these groups are part of the same galactic population.
+Previously, only the overall velocity dispersions of all stars above and below
+the gap have been compared, leading to the assumption that these groups belong
+to two distinct populations \citep{mcquillan2014}.
+The velocity dispersion of stars with rotation periods shorter than the lower
+edge of the rotation period distribution (green triangles) is relatively
+large.
+This is an indication that many of these are synchronized binaries.
+The rotation periods of stars in synchronized binaries are tidally locked to
+the orbital period of the binary system and since synchronized binaries have
+short orbital periods this can produce old, seemingly isolated stars, with
+short rotation periods.
+The large velocity dispersions of the most rapidly rotating stars indicates
+that some fraction of these stars are old but rotating rapidly, and therefore
+likely to be synchronized binaries.
+Figure \ref{fig:gap} indicates that there is an increased probability of stars
+with rotation periods less than $\sim$10 days being synchronized binaries.
+This result is in agreement with a recent study which found that a large
+fraction of visual binaries were rapid rotators, and the probability of a star
+being a synchronized binary system substantially increased at rotation periods
+of around 7 days \citep{simonian2019}.
+
+% We calculated the overall velocity dispersions of stars as a function of
+% rotation period and gyrochronal age.
 
 % Each star is assigned the same velocity dispersion as in figure
 % \ref{fig:vplot}, and because stars in the same temperature group are not
@@ -237,10 +338,6 @@ spinning-down rapidly.
 % % not feature in the \mct\ catalog.
 % If so, figure \ref{fig:dispersion_period_teff} suggests that stars cooler than
 % $\sim$4500 K stay active longer than stars hotter than $\sim$4500 on average.
-
-% % The groups of stars with the largest velocity dispersions are cooler than 4500
-% % K, presumably because cooler stars remain active for longer, and their
-% % rotation periods can therefore be measured at older ages.
 
 % The velocity dispersions of the coolest stars may be affected by a selection
 % bias -- these extremely faint stars are more difficult to detect at larger
@@ -335,4 +432,6 @@ spinning-down rapidly.
 % % a negative slope and a late stage where it has a positive slope.
 % % In this case the period gap may delineate the transition between these two
 % % regimes and is the point at which stellar magnetic dynamos likely undergo a
+% \subsection{Velocity dispersion of coeval groups}
+% \label{sec:age_cut}
 % % dramatic structural shift at an age of $\sim$ 1.1 Gyr.
