--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -10,33 +10,36 @@ main-sequence stars.
 In this work, we use the velocity dispersions of low-mass \kepler\ dwarfs as
 an age proxy, to reveal their rotational evolution and demonstrate that
 kinematics could be a useful tool for calibrating gyrochronology.
-Firstly, we find no evidence for mass-dependent heating in a sample of K and M
-dwarfs in the \kepler\ field.
 % At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
 % to the Praesepe cluster, accurately predicts the relative ages of stars.
-We find that the period-color relationship of the Praesepe cluster is not
-repeated in stars of older ages: a polynomial gyrochronology model, fit to
-Praesepe stars, under-predicts the ages of late K dwarfs in the field.
-In general we find that lower-mass stars spin more slowly than higher-mass
-stars at young ages.
-This is probably because their stronger magnetic fields lead to more efficient
-angular momentum loss and reflects the behavior of young open clusters such as
-the Pleaides, Praesepe, and the Hyades.
-However, at older ages we find that late G and early K dwarfs rotate at the
-{\it same rate} or faster than late K dwarfs of the same age.
+We find that the period-\teff\ relationship of the Praesepe cluster does not
+apply to stars older than around 1 Gyr.
+% : a polynomial gyrochronology model, fit
+% to Praesepe stars, under-predicts the ages of late K dwarfs in the field.
+Although late-K dwarfs spin more slowly than early-K dwarfs when they are
+young, at old ages we find that late-G and early-K dwarfs rotate at the {\it
+same rate} or faster than late-K dwarfs of the same age.
+% This is probably because their stronger magnetic fields lead to more efficient
+% angular momentum loss and reflects the behavior of young open clusters such as
+% the Pleaides, Praesepe, and the Hyades.
+% However, at older ages we find that late G and early K dwarfs rotate at the
+% {\it same rate} or faster than late K dwarfs of the same age.
 % These oThis may be a feature of angular momentum redistribution in the stellar
 % interior.
 % This implies that low-mass stars lose angular momentum more slowly than
 % higher-mass stars after a certain age or Rossby number.
-These results align with recent findings from the rotation periods of stars in
-middle-aged open clusters and theoretical models that vary the rate of
-surface-to-core angular momentum transport as a function of time and mass.
-We also find that the kinematically oldest \kepler\ stars with measured
-rotation periods are late-K and early-M dwarfs, indicating that these stars
-maintain spotted surfaces and stay magnetically active longer than more
-massive stars.
-Finally, we find that the most rapidly rotating K-dwarfs are likely to be
-synchronized binaries.
+This result agrees qualitatively with semi-empirical models that vary the rate
+of surface-to-core angular momentum transport as a function of time and mass.
+It also aligns with recent observations of stars in the NGC 6811 cluster,
+which indicate that K dwarfs experience an epoch of stalled spin-down.
+We find that the oldest \kepler\ stars with measured rotation periods are
+late-K and early-M dwarfs, indicating that these stars maintain spotted
+surfaces and stay magnetically active longer than more massive stars.
+Finally, based on their kinematics, we find that many rapidly rotating
+K-dwarfs are likely to be synchronized binaries.
+% Firstly, we
+% find no evidence for mass-dependent heating in a sample of K and M dwarfs in
+% the \kepler\ field.
 
 % We find that groups of stars, selected to be the same age using a
 % gyrochronology relation calibrated to the Praesepe cluster, do {\it not} have
