--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -90,7 +90,7 @@
     Lauren Anderson,
     Rocio Kiman,
     Travis Berger,
-    \& Dan Foreman-Mackey}
+    Dan Foreman-Mackey, \etal}
     % Megan Bedell,
     % Jackie Faherty,
     % Melissa Ness}
