--- a/paper/results.tex
+++ b/paper/results.tex
@@ -123,6 +123,7 @@ We also limited the sample to temperatures in the range 5500 K $<$ \teff\ $<$
 end, and binarity or weakened braking \citep{vansaders2016} at the hot end.
 Finally, we removed stars with short rotation periods by cutting out stars
 with gyrochronal ages less than 0.5 Gyr.
+After these cuts, 6879 stars were included in the sample.
 
 The top panel of figure \ref{fig:vplot} shows rotation period versus effective
 temperature for the \mct\ sample, coloured by the standard deviation of their
@@ -232,7 +233,7 @@ spinning-down rapidly, and this effect is strongest for late K-dwarfs with
 effective temperatures of $\sim$4000-4500K and masses $\sim$0.5-0.7 M$_\odot$.
 
 It has been demonstrated that lower-mass stars remain magnetically active
-longer than more massive stars, \citep{west2008, kiman2019}.
+longer than more massive stars, \citep[\eg][]{west2008, kiman2019}.
 If the detectability of a rotation period is considered to be a magnetic
 activity proxy, then our results provide further evidence for a mass-dependent
 activity lifetime.
