saving data file

--- a/period_sigma_v.ipynb
+++ b/period_sigma_v.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +71,15 @@
     "print(np.shape(gaia_mc1.iloc[m]), \"no high latitude stars\")\n",
     "\n",
     "gaia_mc = gaia_mc1.iloc[m]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gaia_mc.to_csv(\"stars_for_kinematic_plot.csv\")"
    ]
   },
   {
