--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -16,9 +16,9 @@ We find that the period-\teff\ relationship of the Praesepe cluster does not
 apply to stars older than around 1 Gyr.
 % : a polynomial gyrochronology model, fit
 % to Praesepe stars, under-predicts the ages of late K dwarfs in the field.
-Although late-K dwarfs spin more slowly than early-K dwarfs when they are
-young, at old ages we find that late-G and early-K dwarfs rotate at the {\it
-same rate} or faster than late-K dwarfs of the same age.
+Although late-K dwarfs spin more slowly than early-K and late-G dwarfs when
+they are young, at old ages we find that late-G and early-K dwarfs rotate at
+the {\it same rate} or faster than late-K dwarfs of the same age.
 % This is probably because their stronger magnetic fields lead to more efficient
 % angular momentum loss and reflects the behavior of young open clusters such as
 % the Pleaides, Praesepe, and the Hyades.
