--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -126,6 +126,26 @@ archivePrefix = {arXiv},
       doi = {10.5281/zenodo.2712419}
 }
 
+@ARTICLE{ting2019,
+       author = {{Ting}, Yuan-Sen and {Rix}, Hans-Walter},
+        title = "{The Vertical Motion History of Disk Stars throughout the Galaxy}",
+      journal = {\apj},
+     keywords = {Galaxy: disk, Galaxy: evolution, Galaxy: kinematics and dynamics, Galaxy: structure, methods: data analysis, methods: statistical, Astrophysics - Astrophysics of Galaxies},
+         year = "2019",
+        month = "Jun",
+       volume = {878},
+       number = {1},
+          eid = {21},
+        pages = {21},
+          doi = {10.3847/1538-4357/ab1ea5},
+archivePrefix = {arXiv},
+       eprint = {1808.03278},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...878...21T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{vansaders2019,
        author = {{van Saders}, Jennifer L. and {Pinsonneault}, Marc H. and
          {Barbieri}, Mauro},
