some comments from elisabeth and gus

--- a/paper/method.tex
+++ b/paper/method.tex
@@ -38,22 +38,29 @@ in \gaia\ G-band.
 The dwarf stars in the \mct\ sample are shown on a \gaia\ color-magnitude
 diagram (CMD) in figure \ref{fig:age_gradient}.
 The stars are colored by their gyrochronal age, calculated using the
-\citep{angus2019} gyrochronology relation.
+\citet{angus2019} gyrochronology relation.
 The stars with old gyrochronal ages, plotted in yellow hues, predominantly lie
 along the upper edge of the MS, where stellar evolution models predict old
 stars to be, however the majority of these `old' stars are bluer than \gcolor\
 $\sim$ 1.5 dex.
-This suggests that either old M dwarfs are missing from the \mct\ catalog, or
-the \citet{angus2019} gyrochronology relation under-predicts the ages of
-low-mass stars.
+The lack of chronologically old M dwarfs suggests that either old M dwarfs are
+missing from the \mct\ catalog, or the \citet{angus2019} gyrochronology
+relation under-predicts the ages of low-mass stars.
 Given that lower-mass stars stay active for longer than higher-mass stars
 \citep[\eg][]{west2011}, and are therefore more likely to have measurable
 rotation periods at old ages, the latter scenario seems more likely.
-The \citep{angus2019} gyrochronology relation is a simple polynomial model,
+The \citet{angus2019} gyrochronology relation is a simple polynomial model,
 fit to the period-color relation of Praesepe.
 Since this relation predicts that the oldest stars in the \mct\ sample are
 late-G and early-K dwarfs, it is probably under-predicting the ages of late-K
 and early-M dwarfs.
+This is a common problem with gyrochronology models: since suitable calibrator
+stars are small in number, models cannot be completely calibrated across a
+broad range of parameter space.
+Plotting gyrochronal ages on a color-magnitude diagram reveals the
+deficiencies in the \citet{angus2019} model used to calculate them, however
+imperfections are expected given that no published gyrochronology model is
+thought to be perfectly calibrated.
 \begin{figure}
   \caption{
 Dereddened MS \kepler\ stars with \mct\ rotation periods on the \gaia\ CMD.
